--- a/src/App.css
+++ b/src/App.css
@@ -434,6 +434,17 @@ max-width: 100px;
 }
 
 
+.last-trade-item h5{
+  font-size: 0.4em;
+  margin: 0;
+  color: #fff;
+  padding-bottom: 0.5em;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 600;
+  text-align: center;
+}
+
+
 .trade-wrapper{
 
 }
@@ -442,10 +453,6 @@ max-width: 100px;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  background: url(./images/lines.svg);
-  background-position: bottom;
-  background-repeat: no-repeat;
-  background-size: cover;
   align-items: center;
   flex-wrap: wrap;
   width: 100%;
@@ -468,6 +475,8 @@ max-width: 100px;
 .wallet-pic img{
   max-width: 200px;
   border-radius: 2em;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
 }
 
 .trade-url{
@@ -540,8 +549,15 @@ cursor: pointer;
 }
 
 .wallet-address{
-  margin-top: 0.5em;
   margin-bottom: 1em;
+  padding: 0.5em;
+}
+
+.right-walletaddress{
+  white-space: pre-wrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 150px;
 }
 
 .trade-nav-menu ul{
@@ -1126,10 +1142,20 @@ cursor: pointer;
   padding: 10px;
   width: 200px;
   height: 250px;
-  background-color: #3b3b3b50;
+  background-color: #101010;
   display: flex;
   flex-direction: column;
   margin: 0.5em;
+  align-items: center;
+  border-radius: 0.5em;
+  justify-content: center;
+
+}
+
+
+.nft-trade-item img{
+  width: 90%;
+  border-radius: 0.2em;
 }
 
 .nft-information{
@@ -1143,6 +1169,8 @@ cursor: pointer;
 
 .nft-information a{
   padding-left: 0.3em;
+  margin-bottom: 0;
+  padding-bottom: 0;
 }
 
 
