--- a/src/App.css
+++ b/src/App.css
@@ -2397,7 +2397,7 @@ margin-left: 0;
 
   .mobile-menu{
     position: sticky;
-    bottom: 0;
+    bottom: -2px;
     width: 100%;
     display: flex;
     flex-direction: row;
