--- a/src/App.css
+++ b/src/App.css
@@ -154,6 +154,7 @@ height: 40%;
 }
 
 .main-container{
+  position: relative;
   max-width: 1280px;
   width: 100%;
   background-color: var(--black);
@@ -470,14 +471,15 @@ max-width: 100px;
 }
 
 .wallet-pic{
-  max-width: 200px;
+  width: 200px;
+  height: 200px;
 }
 .wallet-pic img{
   max-width: 200px;
-  border-radius: 2em;
-  border-bottom-left-radius: 0;
-  border-bottom-right-radius: 0;
+  border-radius: 10em;
   border: 2px solid rgba(0, 0, 0, 0.616);
+  width: 200px;
+  height: 200px;
 }
 
 .trade-url{
@@ -569,15 +571,20 @@ cursor: pointer;
 }
 
 .wallet-address{
-  margin-bottom: 1em;
+  margin-top: 0.7em;
   padding: 0.5em;
+  border: 2px solid #00000081;
+  border-radius: 2em;
+  padding-right: 1em;
+  padding-left: 1em;
+  font-size: 0.8em;
 }
 
 .right-walletaddress{
-  white-space: pre-wrap;
+  width: 200px;
   overflow: hidden;
   text-overflow: ellipsis;
-  max-width: 150px;
+  white-space: nowrap;
 }
 
 .trade-nav-menu ul{
@@ -595,6 +602,9 @@ cursor: pointer;
   text-align: center;
   margin: 0;
   cursor: pointer;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .active-trade-menu{
@@ -633,6 +643,9 @@ cursor: pointer;
   font-family: 'Montserrat', sans-serif;
   text-align: center;
   font-size: 1em;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 
@@ -661,10 +674,11 @@ cursor: pointer;
   font-family: 'Montserrat', sans-serif;
   background-color: #0000007a;
   border-right: 1px solid black;
+  font-weight: 800;
 }
 
 .trade-offer-pagination button:disabled{
-  background-color: #9797977a;
+  background-color: #000000;
 }
 
 .offer-date{
@@ -812,6 +826,34 @@ cursor: pointer;
   background-color: white;
 }
 
+.trade-loading{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  background-color: #000000b0;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 600;
+}
+
+.trade-loading a{
+  background-color: var(--blue);
+  padding: 0.8em;
+  border: 0;
+  color: white;
+  border-radius: 3em;
+  font-weight: 600;
+  font-family: 'Montserrat', sans-serif;
+  cursor: pointer;
+}
+
+.trade-loading a:hover{
+  background-color: #3c73bb;
+}
 
 .tutorial{
   width: 100%;
@@ -1078,7 +1120,7 @@ cursor: pointer;
 }
 
 .warning{
-  background-color: #c93f27;
+  background-color: #a12211;
   width: 100%;
   margin-top: 2em;
   color: white;
@@ -1092,10 +1134,14 @@ cursor: pointer;
   margin-bottom: 2em;
 }
 
-.warning h2, .warning p{
+.warning h2{
   margin: 0;
-  margin-left: 1em;
+  margin-left: 0.5em;
+}
 
+.warning p{
+  margin: 5px;
+  margin-left: 0.8em;
 }
 
 .warning button{
@@ -1104,11 +1150,12 @@ cursor: pointer;
   font-family: 'Montserrat', sans-serif;
   font-size: 1.2em;
   color: white;
-  padding-left: 1em;
-  padding-right: 1em;
+  padding-left: 2em;
+  padding-right: 2em;
   cursor: pointer;
   border-radius: 0.5em;
   margin-right: 1em;
+  font-weight: 800;
 }
 
 .trade-information{
@@ -1144,6 +1191,7 @@ cursor: pointer;
 }
 
 .trade-area{
+  position: relative;
   width: 100%;
   display: flex;
   flex-direction: row;
@@ -1172,7 +1220,6 @@ cursor: pointer;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background: url(./images/lines.svg);
   background-color: #00000057;
   background-size: cover;
   background-repeat: no-repeat;
@@ -1199,7 +1246,7 @@ cursor: pointer;
 
 .trade-steps button:disabled{
   cursor: not-allowed;
-  background-color: #2254968a;
+  background-color: #1b2f49;
 }
 
 .trade-steps h4{
@@ -1222,7 +1269,7 @@ cursor: pointer;
   align-items: center;
   border-radius: 0.5em;
   justify-content: center;
-
+  box-sizing: border-box;
 }
 
 
@@ -1304,6 +1351,9 @@ cursor: pointer;
 }
 .trade-step-3{
   animation: tradestep3 1s linear forwards;
+}
+.trade-step-4{
+  animation: tradestep4 1s linear forwards;
 }
 
 .trade-dot-container{
@@ -2303,6 +2353,15 @@ margin-left: 0;
   }
   to {
     width: 85%;
+  }
+}
+
+@keyframes tradestep4{
+  from {
+    width: 85%;
+  }
+  to {
+    width: 100%;
   }
 }
 
