--- a/src/App.css
+++ b/src/App.css
@@ -1670,6 +1670,7 @@ cursor: pointer;
   padding: 1em;
   border-radius: 10em;
   font-weight: 500;
+  cursor: pointer;
 }
 
 .pagination{
@@ -2274,13 +2275,11 @@ margin-left: 0;
   padding: 0.3em;
   padding-left: 1em;
   padding-right: 1em;
-
 }
 
 .affiliates-item p{
   font-size: 1em;
   font-family: 'Montserrat', sans-serif;
-
 }
 
 .affiliates-item button{
@@ -2387,6 +2386,29 @@ margin-left: 0;
   cursor: pointer;
 }
 
+.collection-tags{
+  display: flex;
+  flex-direction: row;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 600;
+}
+
+.collection-tags label{
+  cursor: pointer;
+  margin-left: 1em;
+  padding: 0.5em;
+  background-color: var(--main2);
+  display: flex;
+  flex-direction: row;
+  margin-top: 1em;
+  color: var(--text);
+}
+
+.collection-tags label input{display: none;}
+
+.selected-tag{
+  border: 2px solid var(--news-title);
+}
 
 @keyframes step{
   0%, 10% { color:var(--step);}
@@ -2539,7 +2561,8 @@ margin-left: 0;
   color: #00A8FC;
 }
 .dc-timestamp {
-  background-color: #3F4046;
+  color: var(--both-white);
+  background-color: var(--news-title);
 }
 
 .theme-button{
