--- a/src/App.css
+++ b/src/App.css
@@ -5,9 +5,9 @@
 
 :root {
   --main: #fdfdfd;
-  --main1: #f2f2f2;
-  --main2: #dddddd;
-  --main3: #cecece;
+  --main1: #fafafa;
+  --main2: #ececec;
+  --main3: #eeeeee;
   --blue: #325d96;
   --header: #002D74;
   --text: #262626;
@@ -746,8 +746,6 @@ cursor: pointer;
   width: 100%;
   display: flex;
   flex-direction: row;
-  margin-top: 2em;
-  border: 1px solid var(--news-title);
 }
 
 .trade-offer-pagination button{
@@ -757,18 +755,16 @@ cursor: pointer;
   cursor: pointer;
   color: white;
   font-family: 'Montserrat', sans-serif;
-  background-color: var(--main);
-  border-right: 1px solid black;
+  background-color: var(--main2);
+  border-bottom: 1px solid var(--news-title);
+  border-top: 1px solid var(--news-title);
   color: var(--text);
   font-weight: 800;
 }
 
-.trade-offer-pagination button:first-child{
-  border-left: 1px solid black;
-}
-
 .trade-offer-pagination button:disabled{
-  background-color: var(--main2);
+  background-color: var(--news-title);
+  color: var(--both-white);
 }
 
 .offer-date{
@@ -1257,8 +1253,8 @@ cursor: pointer;
 .trade-information{
   position: relative;
   width: 100%;
-  color: white;
-  background-color: #00000057;
+  color: var(--text);
+  background-color: var(--main2);
   margin: 0;
   border-top-right-radius: 1em;
   border-top-left-radius: 1em;
@@ -1280,7 +1276,7 @@ cursor: pointer;
   padding-bottom: 1em;
   font-weight: 400;
   text-align: center;
-  color: #c7c7c7;
+  color: var(--text);
   padding-left: 1em;
   padding-right: 1em;
 }
@@ -1320,7 +1316,7 @@ cursor: pointer;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background-color: #00000057;
+  background-color: var(--main2);
   background-size: cover;
   background-repeat: no-repeat;
   background-position-y:center;
@@ -1350,10 +1346,8 @@ cursor: pointer;
 
 .trade-steps button:disabled{
   cursor: not-allowed;
-  background-color: #1b2f49;
+  background-color: #2c4668;
 }
-
-
 
 .trade-steps h4{
   color:white;
@@ -1411,10 +1405,11 @@ cursor: pointer;
 .nft-information span a:hover::after{
   content: "provided by minted.network";
   position: absolute;
-  background-color: #000000;
+  background-color: var(--main2);
   padding: 1em;
   font-family: 'Montserrat', sans-serif;
   z-index: 1;
+  color: var(--text);
 }
 
 
@@ -1433,7 +1428,7 @@ cursor: pointer;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  color:white;
+  color:var(--text);
   font-family: 'Montserrat', sans-serif;
   font-weight: 500;
   font-size: 0.7em;
@@ -1894,16 +1889,24 @@ cursor: pointer;
   justify-content: center;
 }
 
-.soon{
+
+
+.soon, .not-found{
   width: 100%;
   height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  font-family: 'Montserrat', sans-serif;
 }
 
-.soon h1{
+.not-found a{
+  color: var(--news-title);
+}
+
+
+.soon h1, .not-found h1{
   white-space:pre-wrap;
   text-align: center;
   overflow: hidden;
@@ -1913,11 +1916,15 @@ cursor: pointer;
   margin-top: 0;
 }
 
+.not-found h1{
+  margin-bottom: 0;
+}
+
 .soon h2{
   white-space:pre-wrap;
   text-align: center;
   overflow: hidden;
-  color: white;
+  color: var(--text);
   font-family: 'Montserrat', sans-serif;
   margin-top: 0;
 }
@@ -1928,10 +1935,9 @@ cursor: pointer;
   max-width: 400px;
 }
 
-.soon h4{
+.soon h4, .not-found h4{
   color: var(--text);
-  margin: 0;
-  font-size: 2em;
+  margin-top: 0;
 }
 
 .dd-wrapper{
@@ -2524,6 +2530,50 @@ margin-left: 0;
   color: var(--text);
   font-family: 'Montserrat', sans-serif;
 
+}
+
+.tictactoe{
+  text-align: center;
+  font-family: 'Montserrat', sans-serif;
+  color: var(--text);
+}
+
+#restartbutton{
+  padding: 1em;
+  border: 0;
+  background-color: var(--news-title);
+  color: var(--both-white);
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 600;
+  cursor: pointer;
+}
+
+.board {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 5px;
+  margin-top: 20px;
+  background-color: var(--main2);
+  font-family: 'Montserrat', sans-serif;
+}
+
+.square-container {
+  font-family: 'Montserrat', sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--main3);
+}
+
+.square {
+  width: 100px;
+  height: 100px;
+  font-size: 48px;
+  border: none;
+  background-color: var(--main);
+  cursor: pointer;
+  font-family: 'Montserrat', sans-serif;
+  color: var(--text);
 }
 
 
